# paper-ai-diffraction

./: .gitignore  README.md  environment-train-eval.yml  environment.yml  pyproject.toml  requirements.txt
configs/: final_mixed_2500k_dualsource.json  mixed_200k_pilot.json  mixed_2500k_merged_reference.json  po_1epoch.json  po_resume2.json
docs/: BENCHMARKS.md  EVALUATION.md  FIGURES.md  PROVENANCE_NOTEBOOKS.md  REVIEWER_NOTEBOOK.md  SUPPLEMENTAL.md  TACC_ENV.md  TRAINING.md  po_dualsource_student_handoff_2026-04-06.md  preferred_orientation_status_2026-04-04.md
notebooks/: reviewer_walkthrough.ipynb  reviewer_walkthrough_colab.ipynb
reproducibility/: MANIFEST.csv  checkpoint_manifest.csv  dataset_manifest.csv  zenodo_files.md
results/: README.md  mixed200k_calibration_metrics_325_eeru8svx.json  mixed200k_calibration_metrics_473_eeru8svx.json  mixed200k_compare_325_failure_modes_eeru8svx.json  mixed200k_coord_only_xrd_model_m02320f0_best_calibration_metrics_325.json  mixed200k_coord_only_xrd_model_m02320f0_best_calibration_metrics_473.json  mixed200k_coord_only_xrd_model_m02320f0_best_split_validity_325.json  mixed200k_coord_only_xrd_model_m02320f0_best_split_validity_473.json  mixed200k_physpe_only_xrd_model_tdcywn8i_best_calibration_metrics_325.json  mixed200k_physpe_only_xrd_model_tdcywn8i_best_calibration_metrics_473.json  mixed200k_physpe_only_xrd_model_tdcywn8i_best_split_validity_325.json  mixed200k_physpe_only_xrd_model_tdcywn8i_best_split_validity_473.json  mixed200k_plain_xrd_model_fxexll5y_best_calibration_metrics_325.json  (+10 more)
scripts/: train_po_1epoch.sh  (+22 more)
(+78 files in other folders)
