[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-ai-diffraction"
version = "0.1.0"
description = "Paper-focused reproducibility repository for Attention Is Not All You Need for Diffraction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
